--- a/hw3/index.html
+++ b/hw3/index.html
@@ -262,7 +262,7 @@
 				</tr>
 		<tr>
 					<td style="text-align: center;">
-						<img src="cb_bunny_m5_accum.png" width="400px"/>
+						<img src="bunny_true_1.png" width="400px"/>
 		<figcaption><i>Accumulated bounces with m = 1</i></figcaption>
 					</td>
 					<td style="text-align: center;">
@@ -272,7 +272,7 @@
 				</tr>
 		<tr>
 					<td style="text-align: center;">
-						<img src="cb_bunny_m4_accum.png" width="400px"/>
+						<img src="bunny_true_2.png" width="400px"/>
 		<figcaption><i>Accumulated bounces with m = 2</i></figcaption>
 					</td>
 					<td style="text-align: center;">
