--- a/hw3/index.html
+++ b/hw3/index.html
@@ -211,11 +211,11 @@
 		<table style="width: 100%; text-align: center; border-collapse: collapse;">
 		<tr>
 					<td style="text-align: center;">
-						<img src="bounce0.png" width="400px"/>
+						<img src="bunny_false_0.png" width="400px"/>
 		<figcaption><i>max_ray_depth = 0</i></figcaption>
 					</td>
 					<td style="text-align: center;">
-						<img src="bounce1.png" width="400px"/>
+						<img src="bunny_false_1.png" width="400px"/>
 						<figcaption><i>max_ray_depth = 1</i></figcaption>
 					</td>
 				</tr>
@@ -252,7 +252,7 @@
 		<table style="width: 100%; text-align: center; border-collapse: collapse;">
 		<tr>
 					<td style="text-align: center;">
-						<img src="bounce0.png" width="400px"/>
+						<img src="bunny_false_0.png" width="400px"/>
 		<figcaption><i>Accumulated bounces with m = 0</i></figcaption>
 					</td>
 					<td style="text-align: center;">
@@ -266,7 +266,7 @@
 		<figcaption><i>Accumulated bounces with m = 1</i></figcaption>
 					</td>
 					<td style="text-align: center;">
-						<img src="bounce1.png" width="400px"/>
+						<img src="bunny_false_1.png" width="400px"/>
 						<figcaption><i>Unaccumulated bounces with m = 1</i></figcaption>
 					</td>
 				</tr>
@@ -276,13 +276,13 @@
 		<figcaption><i>Accumulated bounces with m = 2</i></figcaption>
 					</td>
 					<td style="text-align: center;">
-						<img src="bounce1test.png" width="400px"/>
+						<img src="bunny_false_2.png" width="400px"/>
 						<figcaption><i>Unaccumulated bounces with m = 2</i></figcaption>
 					</td>
 				</tr>
 		<tr>
 					<td style="text-align: center;">
-						<img src="cb_bunny_m3_accum.png" width="400px"/>
+						<img src="bunny_true_3.png" width="400px"/>
 		<figcaption><i>Accumulated bounces with m = 3</i></figcaption>
 					</td>
 					<td style="text-align: center;">
@@ -292,7 +292,7 @@
 				</tr>
 		<tr>
 					<td style="text-align: center;">
-						<img src="cb_bunny_m2_accum.png" width="400px"/>
+						<img src="bunny_true_4.png" width="400px"/>
 		<figcaption><i>Accumulated bounces with m = 4</i></figcaption>
 					</td>
 					<td style="text-align: center;">
@@ -302,7 +302,7 @@
 				</tr>
 		<tr>
 					<td style="text-align: center;">
-						<img src="cb_bunny_m1_accum.png" width="400px"/>
+						<img src="bunny_true_5.png" width="400px"/>
 		<figcaption><i>Accumulated bounces with m = 5</i></figcaption>
 					</td>
 					<td style="text-align: center;">
@@ -343,14 +343,14 @@
 		<figcaption><i>max_ray_depth = 4</i></figcaption>
 					</td>
 					<td style="text-align: center;">
-						<img src="bunny_m100.png" width="400px"/>
+						<img src="bunny_rr_100.png" width="400px"/>
 						<figcaption><i>max_ray_depth = 100</i></figcaption>
 					</td>
 				</tr>
 			</table>
 		</div>
 
-		<p><b>Comparing rendered views of <i>CBspheres_lambertian.dae</i>with various sample-per-pixel rates, including at least 1, 2, 4, 8, 16, 64, and 1024, using 4 light rays:</b></p>
+		<p><b>Comparing rendered views of <i>CBspheres_lambertian.dae</i> with various sample-per-pixel rates, including at least 1, 2, 4, 8, 16, 64, and 1024, using 4 light rays:</b></p>
 
 		<div style="display: flex; flex-direction: column; align-items: center;">
 		<table style="width: 100%; text-align: center; border-collapse: collapse;">
